/**
 ##
 ## OverDrive 2026
 ## All Technical rights reserved
 ##
 ## database_scheme.sql - Database scheme file for PostgreSQL
 ##
*/

//-------------------------
// Setup
//-------------------------
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator db {
  provider = "go run github.com/steebchen/prisma-client-go"
}

//-------------------------
// Types
//-------------------------
enum ProviderStatus {
  active
  beta
  disabled
}

enum WidgetType {
  video
}

enum EventStatus {
  scheduled
  live
  finished
}

enum SessionType {
  race
  sprint
  quali
  practice
}

enum SessionStatus {
  scheduled
  live
  finished
}

enum ArchiveMode {
  full
  driver_focused
}

//-------------------------
// User
//-------------------------
model User {
  id            String   @id @default(uuid())
  email         String   @unique @db.VarChar(255)
  displayName   String   @db.VarChar(50)
  passwordHash  String
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  authSessions        AuthSession[]
  providerConnections ProviderConnection[]
  presets             UserPreset[]
}

//-------------------------
// Auth Session
//-------------------------
model AuthSession {
  id               String   @id @default(uuid())
  userId           String
  refreshTokenHash String
  expiresAt        DateTime
  createdAt        DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

//-------------------------
// Provider
//-------------------------
model Provider {
  id        String         @id @default(uuid())
  code      String         @unique @db.VarChar(20)
  name      String         @db.VarChar(50)
  status    ProviderStatus @default(active)
  createdAt DateTime       @default(now())

  connections ProviderConnection[]
  championships Championship[]
}

//-------------------------
// Provider Connection
//-------------------------
model ProviderConnection {
  id         String   @id @default(uuid())
  userId     String
  providerId String
  configJson Json
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  provider Provider @relation(fields: [providerId], references: [id], onDelete: Cascade)

  @@unique([userId, providerId])
  @@index([providerId])
}

//-------------------------
// User Preset
//-------------------------
model UserPreset {
  id        String   @id @default(uuid())
  userId    String
  name      String   @db.VarChar(50)
  isDefault Boolean
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user    User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  widgets PresetWidget[]

  @@index([userId])
}

//-------------------------
// Preset Widget
//-------------------------
model PresetWidget {
  id        String   @id @default(uuid())
  presetId  String
  type      WidgetType
  settings  Json
  posX      Float
  posY      Float
  posZ      Float
  rotX      Float
  rotY      Float
  rotZ      Float
  width     Float
  height    Float
  orderIndex Int     @default(0)

  preset UserPreset @relation(fields: [presetId], references: [id], onDelete: Cascade)

  @@index([presetId])
}

//-------------------------
// Championship
//-------------------------
model Championship {
  id          String   @id @default(uuid())
  providerId  String
  code        String   @db.VarChar(20)
  name        String   @db.VarChar(80)
  category    String?  @db.VarChar(40)
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  provider Provider @relation(fields: [providerId], references: [id], onDelete: Cascade)
  events   Event[]
  teams    Team[]
  drivers  Driver[]

  @@unique([providerId, code])
  @@index([providerId])
}

//-------------------------
// Event
//-------------------------
model Event {
  id             String      @id @default(uuid())
  championshipId String
  seasonYear     Int
  roundNumber    Int?
  name           String      @db.VarChar(120)
  officialName   String?     @db.VarChar(255)
  location       String      @db.VarChar(255)
  countryName    String?     @db.VarChar(80)
  countryCode    String?     @db.VarChar(3)
  circuitName    String?     @db.VarChar(120)
  externalKey    String?     @db.VarChar(64)
  startTimeUtc   DateTime
  endTimeUtc     DateTime
  status         EventStatus
  createdAt      DateTime    @default(now())
  updatedAt      DateTime    @updatedAt

  championship Championship @relation(fields: [championshipId], references: [id], onDelete: Cascade)
  sessions     Session[]

  @@unique([championshipId, externalKey])
  @@index([championshipId])
  @@index([seasonYear, startTimeUtc])
}

//-------------------------
// Session
//-------------------------
model Session {
  id           String        @id @default(uuid())
  eventId      String
  type         SessionType
  status       SessionStatus
  name         String?       @db.VarChar(80)
  externalKey  String?       @db.VarChar(64)
  broadcastUrl String?       @db.VarChar(255)
  startedAtUtc DateTime
  endedAtUtc   DateTime?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  event                  Event                        @relation(fields: [eventId], references: [id], onDelete: Cascade)
  highlights             RaceHighlight[]
  archives               RaceArchive[]
  laps                   RaceLap[]
  telemetrySamples       RaceTelemetrySample[]
  locationSamples        RaceLocationSample[]
  positionSamples        RacePositionSample[]
  intervalSamples        RaceIntervalSample[]
  stintRows              RaceStint[]
  pitStops               RacePitStop[]
  raceControlEvents      RaceControlEvent[]
  teamRadioMessages      TeamRadioMessage[]
  weatherSamples         RaceWeatherSample[]
  sessionResultRows      SessionResultRow[]
  startingGridRows       StartingGridRow[]
  overtakeEvents         OvertakeEvent[]
  driverChampionshipRows DriverChampionshipStanding[]
  teamChampionshipRows   TeamChampionshipStanding[]
  driverBroadcasts       SessionDriverBroadcast[]

  @@unique([eventId, externalKey])
  @@index([eventId])
}

//-------------------------
// Race Highlight
//-------------------------
model RaceHighlight {
  id          String   @id @default(uuid())
  sessionId   String
  timestampMs Int
  type        String   @db.VarChar(50)
  summary     String
  metadata    Json

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId])
}

//-------------------------
// Team
//-------------------------
model Team {
  id          String  @id @default(uuid())
  championshipId String
  name        String  @db.VarChar(80)
  code        String? @db.VarChar(20)
  colorHex    String? @db.VarChar(7)
  externalKey String? @db.VarChar(64)

  championship Championship @relation(fields: [championshipId], references: [id], onDelete: Cascade)
  drivers      Driver[]

  @@unique([championshipId, externalKey])
  @@unique([championshipId, code])
  @@index([championshipId])
}

//-------------------------
// Driver
//-------------------------
model Driver {
  id          String   @id @default(uuid())
  championshipId String
  teamId      String
  displayName String   @db.VarChar(80)
  firstName   String?  @db.VarChar(60)
  lastName    String?  @db.VarChar(60)
  code        String?  @db.VarChar(20)
  number      Int
  countryCode String?  @db.VarChar(3)
  externalKey String?  @db.VarChar(64)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  championship Championship @relation(fields: [championshipId], references: [id], onDelete: Cascade)
  team     Team     @relation(fields: [teamId], references: [id], onDelete: Cascade)
  sessionBroadcasts SessionDriverBroadcast[]

  @@unique([championshipId, code])
  @@unique([championshipId, externalKey])
  @@index([championshipId])
  @@index([teamId])
}

//-------------------------
// Session Driver Broadcast
//-------------------------
model SessionDriverBroadcast {
  id           String   @id @default(uuid())
  sessionId    String
  driverId     String
  broadcastUrl String   @db.VarChar(255)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  driver  Driver  @relation(fields: [driverId], references: [id], onDelete: Cascade)

  @@unique([sessionId, driverId])
  @@index([sessionId])
  @@index([driverId])
}

//-------------------------
// Raw Race Archive
//-------------------------
model RaceArchive {
  id                 String      @id @default(uuid())
  sessionId          String
  mode               ArchiveMode @default(full)
  generatedAt        DateTime    @default(now())
  sourceMeetingKey   Int?
  sourceSessionKey   Int?
  sourceDriverNumber Int?
  metadata           Json
  counts             Json
  fetchErrors        Json?

  session  Session            @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  datasets RaceDatasetChunk[]

  @@index([sessionId, generatedAt(sort: Desc)])
  @@index([sourceMeetingKey, sourceSessionKey])
}

model RaceDatasetChunk {
  id         BigInt   @id @default(autoincrement())
  archiveId  String
  dataset    String   @db.VarChar(50)
  chunkIndex Int      @default(0)
  rowCount   Int      @default(0)
  rows       Json
  createdAt  DateTime @default(now())

  archive RaceArchive @relation(fields: [archiveId], references: [id], onDelete: Cascade)

  @@unique([archiveId, dataset, chunkIndex])
  @@index([dataset])
}

//-------------------------
// Race Time-Series
//-------------------------
model RaceLap {
  id             BigInt    @id @default(autoincrement())
  sessionId      String
  driverNumber   Int
  lapNumber      Int
  dateStartUtc   DateTime?
  lapDurationSec Float?
  sector1Sec     Float?
  sector2Sec     Float?
  sector3Sec     Float?
  speedI1Kph     Int?
  speedI2Kph     Int?
  speedTrapKph   Int?
  isPitOutLap    Boolean?
  raw            Json
  createdAt      DateTime  @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([sessionId, driverNumber, lapNumber])
  @@index([sessionId, driverNumber, lapNumber])
  @@index([sessionId, dateStartUtc])
}

model RaceTelemetrySample {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  dateUtc      DateTime
  speedKph     Int?
  rpm          Int?
  gear         Int?
  throttlePct  Float?
  brakePct     Float?
  drsState     Int?
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, driverNumber, dateUtc])
}

model RaceLocationSample {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  dateUtc      DateTime
  x            Float?
  y            Float?
  z            Float?
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, driverNumber, dateUtc])
}

model RacePositionSample {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  dateUtc      DateTime
  lapNumber    Int?
  position     Int?
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, driverNumber, dateUtc])
  @@index([sessionId, position])
}

model RaceIntervalSample {
  id                    BigInt   @id @default(autoincrement())
  sessionId             String
  driverNumber          Int
  dateUtc               DateTime
  gapToLeader           String?  @db.VarChar(40)
  intervalToFrontDriver String?  @db.VarChar(40)
  raw                   Json
  createdAt             DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, driverNumber, dateUtc])
}

model RaceStint {
  id               BigInt   @id @default(autoincrement())
  sessionId        String
  driverNumber     Int
  stintNumber      Int?
  lapStart         Int?
  lapEnd           Int?
  compound         String?  @db.VarChar(40)
  tyreAgeLapsStart Int?
  raw              Json
  createdAt        DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, driverNumber])
  @@index([sessionId, lapStart, lapEnd])
}

model RacePitStop {
  id             BigInt    @id @default(autoincrement())
  sessionId      String
  driverNumber   Int
  lapNumber      Int?
  dateUtc        DateTime?
  pitDurationSec Float?
  raw            Json
  createdAt      DateTime  @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, driverNumber, dateUtc])
  @@index([sessionId, lapNumber])
}

model RaceControlEvent {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  dateUtc      DateTime
  lapNumber    Int?
  driverNumber Int?
  category     String?  @db.VarChar(60)
  flag         String?  @db.VarChar(40)
  scope        String?  @db.VarChar(80)
  message      String?
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, category])
  @@index([sessionId, flag])
}

model TeamRadioMessage {
  id           BigInt    @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  dateUtc      DateTime?
  recordingUrl String?   @db.VarChar(500)
  transcript   String?
  raw          Json
  createdAt    DateTime  @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, driverNumber, dateUtc])
}

model RaceWeatherSample {
  id               BigInt   @id @default(autoincrement())
  sessionId        String
  dateUtc          DateTime
  airTempC         Float?
  trackTempC       Float?
  humidityPct      Float?
  pressureHpa      Float?
  windSpeedKph     Float?
  windDirectionDeg Int?
  rainfallMm       Float?
  raw              Json
  createdAt        DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
}

model SessionResultRow {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  position     Int?
  points       Float?
  status       String?  @db.VarChar(40)
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([sessionId, driverNumber])
  @@index([sessionId, position])
}

model StartingGridRow {
  id           BigInt   @id @default(autoincrement())
  sessionId    String
  driverNumber Int
  gridPosition Int?
  raw          Json
  createdAt    DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([sessionId, driverNumber])
  @@index([sessionId, gridPosition])
}

model OvertakeEvent {
  id                     BigInt    @id @default(autoincrement())
  sessionId              String
  dateUtc                DateTime?
  lapNumber              Int?
  overtakingDriverNumber Int?
  overtakenDriverNumber  Int?
  raw                    Json
  createdAt              DateTime  @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, dateUtc])
  @@index([sessionId, lapNumber])
}

model DriverChampionshipStanding {
  id              BigInt   @id @default(autoincrement())
  sessionId       String
  driverNumber    Int
  positionCurrent Int?
  positionStart   Int?
  pointsCurrent   Float?
  pointsStart     Float?
  raw             Json
  createdAt       DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([sessionId, driverNumber])
  @@index([sessionId, positionCurrent])
}

model TeamChampionshipStanding {
  id              BigInt   @id @default(autoincrement())
  sessionId       String
  teamName        String?  @db.VarChar(80)
  teamCode        String?  @db.VarChar(20)
  positionCurrent Int?
  positionStart   Int?
  pointsCurrent   Float?
  pointsStart     Float?
  raw             Json
  createdAt       DateTime @default(now())

  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, positionCurrent])
  @@index([sessionId, teamName])
}
