erDiagram
  User {
    string id PK
    string email UK
    string displayName
    string passwordHash
    datetime createdAt
    datetime updatedAt
  }

  AuthSession {
    string id PK
    string userId FK
    string refreshTokenHash
    datetime expiresAt
    datetime createdAt
  }

  Provider {
    string id PK
    string code UK
    string name
    string status
    datetime createdAt
  }

  Championship {
    string id PK
    string providerId FK
    string code
    string name
    string category
    boolean isActive
    datetime createdAt
    datetime updatedAt
  }

  ProviderConnection {
    string id PK
    string userId FK
    string providerId FK
    json configJson
    datetime createdAt
    datetime updatedAt
  }

  UserPreset {
    string id PK
    string userId FK
    string name
    boolean isDefault
    datetime createdAt
    datetime updatedAt
  }

  PresetWidget {
    string id PK
    string presetId FK
    string type
    json settings
    float posX
    float posY
    float posZ
    float rotX
    float rotY
    float rotZ
    float width
    float height
    int orderIndex
  }

  Event {
    string id PK
    string championshipId FK
    int seasonYear
    int roundNumber
    string name
    string officialName
    string location
    string countryName
    string countryCode
    string circuitName
    string externalKey
    datetime startTimeUtc
    datetime endTimeUtc
    string status
    datetime createdAt
    datetime updatedAt
  }

  Session {
    string id PK
    string eventId FK
    string type
    string status
    string name
    string externalKey
    string broadcastUrl
    datetime startedAtUtc
    datetime endedAtUtc
    datetime createdAt
    datetime updatedAt
  }

  RaceHighlight {
    string id PK
    string sessionId FK
    int timestampMs
    string type
    string summary
    json metadata
  }

  Team {
    string id PK
    string championshipId FK
    string name
    string code
    string colorHex
    string externalKey
  }

  Driver {
    string id PK
    string championshipId FK
    string teamId FK
    string displayName
    string firstName
    string lastName
    string code
    int number
    string countryCode
    string externalKey
    datetime createdAt
    datetime updatedAt
  }

  SessionDriverBroadcast {
    string id PK
    string sessionId FK
    string driverId FK
    string broadcastUrl
    datetime createdAt
    datetime updatedAt
  }

  RaceArchive {
    string id PK
    string sessionId FK
    string mode
    datetime generatedAt
    int sourceMeetingKey
    int sourceSessionKey
    int sourceDriverNumber
    json metadata
    json counts
    json fetchErrors
  }

  RaceDatasetChunk {
    bigint id PK
    string archiveId FK
    string dataset
    int chunkIndex
    int rowCount
    json rows
    datetime createdAt
  }

  RaceLap {
    bigint id PK
    string sessionId FK
    int driverNumber
    int lapNumber
    datetime dateStartUtc
    float lapDurationSec
    float sector1Sec
    float sector2Sec
    float sector3Sec
    int speedI1Kph
    int speedI2Kph
    int speedTrapKph
    boolean isPitOutLap
    json raw
    datetime createdAt
  }

  RaceTelemetrySample {
    bigint id PK
    string sessionId FK
    int driverNumber
    datetime dateUtc
    int speedKph
    int rpm
    int gear
    float throttlePct
    float brakePct
    int drsState
    json raw
    datetime createdAt
  }

  RaceLocationSample {
    bigint id PK
    string sessionId FK
    int driverNumber
    datetime dateUtc
    float x
    float y
    float z
    json raw
    datetime createdAt
  }

  RacePositionSample {
    bigint id PK
    string sessionId FK
    int driverNumber
    datetime dateUtc
    int lapNumber
    int position
    json raw
    datetime createdAt
  }

  RaceIntervalSample {
    bigint id PK
    string sessionId FK
    int driverNumber
    datetime dateUtc
    string gapToLeader
    string intervalToFrontDriver
    json raw
    datetime createdAt
  }

  RaceStint {
    bigint id PK
    string sessionId FK
    int driverNumber
    int stintNumber
    int lapStart
    int lapEnd
    string compound
    int tyreAgeLapsStart
    json raw
    datetime createdAt
  }

  RacePitStop {
    bigint id PK
    string sessionId FK
    int driverNumber
    int lapNumber
    datetime dateUtc
    float pitDurationSec
    json raw
    datetime createdAt
  }

  RaceControlEvent {
    bigint id PK
    string sessionId FK
    datetime dateUtc
    int lapNumber
    int driverNumber
    string category
    string flag
    string scope
    string message
    json raw
    datetime createdAt
  }

  TeamRadioMessage {
    bigint id PK
    string sessionId FK
    int driverNumber
    datetime dateUtc
    string recordingUrl
    string transcript
    json raw
    datetime createdAt
  }

  RaceWeatherSample {
    bigint id PK
    string sessionId FK
    datetime dateUtc
    float airTempC
    float trackTempC
    float humidityPct
    float pressureHpa
    float windSpeedKph
    int windDirectionDeg
    float rainfallMm
    json raw
    datetime createdAt
  }

  SessionResultRow {
    bigint id PK
    string sessionId FK
    int driverNumber
    int position
    float points
    string status
    json raw
    datetime createdAt
  }

  StartingGridRow {
    bigint id PK
    string sessionId FK
    int driverNumber
    int gridPosition
    json raw
    datetime createdAt
  }

  OvertakeEvent {
    bigint id PK
    string sessionId FK
    datetime dateUtc
    int lapNumber
    int overtakingDriverNumber
    int overtakenDriverNumber
    json raw
    datetime createdAt
  }

  DriverChampionshipStanding {
    bigint id PK
    string sessionId FK
    int driverNumber
    int positionCurrent
    int positionStart
    float pointsCurrent
    float pointsStart
    json raw
    datetime createdAt
  }

  TeamChampionshipStanding {
    bigint id PK
    string sessionId FK
    string teamName
    string teamCode
    int positionCurrent
    int positionStart
    float pointsCurrent
    float pointsStart
    json raw
    datetime createdAt
  }

  User ||--o{ AuthSession : has
  User ||--o{ ProviderConnection : configures
  User ||--o{ UserPreset : owns

  Provider ||--o{ ProviderConnection : provides
  Provider ||--o{ Championship : owns
  UserPreset ||--o{ PresetWidget : contains

  Championship ||--o{ Event : schedules
  Championship ||--o{ Team : contains
  Championship ||--o{ Driver : registers
  Event ||--o{ Session : has

  Session ||--o{ RaceHighlight : generates
  Session ||--o{ SessionDriverBroadcast : broadcasts
  Session ||--o{ RaceArchive : stores
  RaceArchive ||--o{ RaceDatasetChunk : chunks

  Session ||--o{ RaceLap : contains
  Session ||--o{ RaceTelemetrySample : streams
  Session ||--o{ RaceLocationSample : tracks
  Session ||--o{ RacePositionSample : ranks
  Session ||--o{ RaceIntervalSample : gaps
  Session ||--o{ RaceStint : stints
  Session ||--o{ RacePitStop : pits
  Session ||--o{ RaceControlEvent : controls
  Session ||--o{ TeamRadioMessage : radios
  Session ||--o{ RaceWeatherSample : weather
  Session ||--o{ SessionResultRow : results
  Session ||--o{ StartingGridRow : grid
  Session ||--o{ OvertakeEvent : overtakes
  Session ||--o{ DriverChampionshipStanding : driver_championship
  Session ||--o{ TeamChampionshipStanding : team_championship

  Team ||--o{ Driver : has
  Driver ||--o{ SessionDriverBroadcast : streams
